[metadata]
name = hub_api
version = 0.1.0
description = Public hub API for discovering packages and workflows.
long_description = file: README.md
keywords = OpenAPI AstraFlow Hub API
python_requires = >= 3.7.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
install_requires = fastapi[all]
setup_requires = setuptools
package_dir = =src
packages = find_namespace:

[options.packages.find]
where = src
